# Len-Mod-036-2025

./: .dockerignore  1  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  requirements.txt
ecdc/: auth.py  translator.py
encrypt-decrypt.venv/: .coverage  Dockerfile  app.py  pyproject.toml  pyvenv.cfg  requirements.txt
encrypt-decrypt.venv/.pytest_cache/v/cache/: lastfailed  nodeids
encrypt-decrypt.venv/ecdc/: __init__.py  schema.sql  translator.py
encrypt-decrypt.venv/ecdc/templates/: base.html
encrypt-decrypt.venv/ecdc/templates/translator/: create.html  index.html  update.html
encrypt-decrypt.venv/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_d45444a5ba366407___init___py.html  z_d45444a5ba366407_auth_py.html  z_d45444a5ba366407_caesar_py.html  z_d45444a5ba366407_db_py.html  z_d45444a5ba366407_translator_py.html
encrypt-decrypt.venv/tests/: caesar.py  conftest.py  data.sql  test_db.py  test_factory.py  test_translator.py
encrypt-decrypt.venv/var/ecdc-instance/: config.py  flaskr.sqlite
flask/: Dockerfile  app.ini  pyproject.toml  requirements.txt  run.py
flask/ecdc/: __init__.py
flask/ecdc/templates/: base.html
nginx/: Dockerfile  nginx.conf
