[project]
name = "ecdc"
version = "0.0.5"
description = "Online code encryption and decryiption."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ecdc"]

